fixed alignment on the nav and edited the styles of the mobile nav menu

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,12 @@
      box-shadow:  var(--secondary-box-shadow)
 }
 
+.header .header-container {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+}
+
 .header .logo {
      height: 65px;
 }
@@ -18,6 +24,7 @@
 .nav-menu .nav-list {
      display: flex;
      justify-content: space-between;
+     background: var(--secondary-bg-color);
 }
 
 .nav-menu .nav-list .nav-item a {
@@ -26,6 +33,10 @@
      font-weight: 600;
      white-space: nowrap;
      color: var(--secondary-text-color);
+}
+
+.nav-menu .nav-list .nav-item a:last-child {
+     padding-right: 0;
 }
 
 .nav-menu .nav-list .nav-item a:hover {
@@ -64,13 +75,19 @@
           justify-content: center !important;
           align-items: center;
           z-index: 100;
-          background: white;
      }
      .nav-list.active{
           top: 0;
      }
 
-     .nav-item a {
-          font-size: 3vw;
+     .nav-menu .nav-list .nav-item {
+          margin-bottom: 20px;
+     }
+
+     .nav-menu .nav-list .nav-item a {
+          padding: 0;
+          font-size: 10vw;
+          color: var(--secondary-bg-color);
+          text-shadow: 1px 1px 0 var(--primary-color), -1px -1px 0 var(--primary-color), 1px -1px 0 var(--primary-color), -1px 1px 0 var(--primary-color), 1px 1px 0 var(--primary-color);
      }
 }
